# new_GUI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gui_launcher.desktop  install_desktop.sh  install_humble.bash  install_humble.sh  launch.bash  launch.sh
install/: local_setup.sh  setup.sh
install/aruco_finder/share/aruco_finder/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gui_window/lib/gui_window/: gui
install/gui_window/share/gui_window/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hockey_stick_arm/share/hockey_stick_arm/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/marker_interfacing/share/marker_interfacing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ocean_optics_spectrometer/share/ocean_optics_spectrometer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rover_gui_lib/share/rover_gui_lib/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/science_servo_control/share/science_servo_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/theora_webcams/share/theora_webcams/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/urc_gui_lib/share/urc_gui_lib/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/Interfaces/aruco_finder/: CMakeLists.txt
src/Interfaces/marker_interfacing/: CMakeLists.txt
src/Interfaces/ocean_optics_spectrometer/: CMakeLists.txt  package.xml
src/Interfaces/planner_multiplexer/: CMakeLists.txt  package.xml
src/Interfaces/theora_webcams/: package.xml
src/aruco_finder/: CMakeLists.txt  package.xml
src/gui_window/: package.xml  setup.cfg  setup.py
src/gui_window/config/: params.yaml
src/gui_window/gui_window/: main.py  science.py  wanderer_controls.py  wanderer_ros_link.py
src/gui_window/launch/: gui_bringup.launch.py
src/heimdall_gui/: package.xml  setup.py
src/heimdall_gui/config/: params.yaml
src/heimdall_gui/heimdall_gui/: current_display_widget.py  main.py  science.py  wanderer_controls.py  wanderer_ros_link.py
src/hockey_stick_arm/: CMakeLists.txt  package.xml
src/marker_interfacing/: package.xml
src/marker_manager/: package.xml  setup.cfg  setup.py
src/marker_manager/marker_manager/: marker_mnger.py
src/new_gui/: setup.cfg
src/new_gui/launch/: gui_bringup.launch.py
src/new_gui/new_gui/: __init__.py  current_display_widget.py  main.py  science.py  wanderer_controls.py  wanderer_ros_link.py
src/rover_gui_lib/: CMakeLists.txt
src/science_servo_control/: CMakeLists.txt  package.xml
src/theora_webcams/: CMakeLists.txt
src/theora_webcams/src/: camera_publisher_v4l2.cpp
src/urc_gui_lib/: CMakeLists.txt
(+594 files in other folders)
